--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,164 @@
-import Result from '#features/shared/result.js';
+import { FeeCase } from '#src/models/entities/FeeCase.js'
+import Result from '#features/shared/result.js'
+import {
+  connectToFeeMgmtDb,
+  executeStoreProcedure
+} from '#core/data/mssql/index.js'
 
-export default class FeeCaseGetByCifUseCase {
-  async execute({ cif }, feeManagementModel, customerModel) {
-    const [errCustomer, responseCustomer] = await customerModel.getCustomerDetailsByCif(cif);
-    if (errCustomer) {
-      return Result.fail({ message: "It's not possible to get address cif" });
+export default class FeeGetByCifUseCase {
+  async execute({ customerAccount }) {
+    global.logger.info('FeeGetByCifUseCase()')
+
+    const cifno = customerAccount[0].cifno
+
+    const feesData = await this.#getFeesFromSQL(cifno)
+
+    if (!feesData.length) {
+      return Result.fail({ message: "No data found for this CIF" })
     }
 
-    const customerData = responseCustomer?.data?.customer || {};
-    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(customerData);
-    if (errFee) {
-      return Result.fail({ message: "It's not possible to get fee values" });
-    }
+    const feePackageId = feesData[0]['Default Fee Package Id'] || null
 
-    function formatCamelCaseToTitle(text) {
-      return text.replace(/([a-z])([A-Z])/g, '$1 $2');
-    }
+    const exceptionData = feePackageId
+      ? await this.#getExceptionFeesFromSQL(feePackageId)
+      : []
 
-    const feesData = responseFee?.data || {};
-    const timestamp = new Date().toISOString();
+      const result = {
+        cif: feesData[0]?.CIFNO?.trim() || cifno, 
+        customerName: feesData[0]?.CustomerName?.trim() || '', 
+        customerShortName: feesData[0]?.CustomerShortName?.trim() || '', 
+        customerAddress: feesData[0]?.CustomerAddress?.trim() || '',
+        customerAccountOfficer: feesData[0]?.Officer?.trim() || '',
+        officerId: feesData[0]?.OfficerId?.trim() || '',
+        branchCity: feesData[0]?.['Branch City']?.trim() || feesData[0]?.branchCity?.trim() || '',
+        branchState: feesData[0]?.['Branch State']?.trim() || feesData[0]?.branchState?.trim() || '',
+        feePackage: feesData[0]?.['Default Fee Package']?.trim() || feesData[0]?.feePackage?.trim() || '',
+        defaultFeePackageId: feesData[0]?.['Default Fee Package Id'] || feesData[0]?.defaultFeePackageId || '',
+      
+        fees: feesData?.fees || this.#mapFeesByCategory(feesData, exceptionData),
+        feesActives: feesData?.feesActives || await this.#getActiveFees(cifno),
+      
+        documentUrl: feesData?.documentUrl || this.#getDocumentUrl(feePackageId),
+      
+        currentFees: feesData?.currentFees || this.#mapCurrentFees(feesData)
+      }
 
-    const currentFees = [
-      ...(customerData?.customerCurrentFees?.map(x => ({
-        feeDescription: x.feeDescription || '',
-        feeCode: x.feeCode || ''
-      })) || []),
-      ...(feesData?.currentFees || [])
-    ];
+    return Result.ok(result)
+  }
 
-    const formattedFees = customerData?.customerAccount?.map(fee => ({
-      feeGroups: [{
-        name: fee.feeGroup === 1 ? "Client Current Fees" : "Standard Fees",
+  async #getFeesFromSQL(cifno) {
+    global.logger.info('getFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno })
+    return recordset
+  }
+
+  async #getExceptionFeesFromSQL(feePackageId) {
+    global.logger.info('getExceptionFeesFromSQL()')
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_exception_fees_bypackage', { feePackageId })
+    return recordset
+  }
+
+  async #getActiveFees(cifno) {
+    const feesActives = await FeeCase.find({
+      cif: cifno,
+      status: { $nin: ['DONE', 'REJECTED'] },
+      caseNumber: { $exists: true }
+    })
+
+    return feesActives.map((x) => ({
+      caseNumber: x.caseNumber,
+      id: x.id
+    }))
+  }
+
+  #mapFeesByCategory(feesData, exceptionData) {
+    const mappedFees = []
+
+    feesData.forEach(record => {
+      const isException = record.StandardException === 'Exception'
+      const isCurrentClient = record.FeeAmount > 0
+
+      const field = {
+        code: record.FeeCode,
+        name: record.FeeDescription,
+        defaultValue: record['Default Fee Amount'] || '',
+        isStandard: !isException,
+        isException: isException,
+        isCurrentClient: isCurrentClient,
+        labelValue: record.FeeAmount ? `$${record.FeeAmount}.00` : '',
+        frequency: record.Frequency || '',
+        defaultFrequency: record['Default Frequency'] || '',
+        amount: record.FeeAmount || record['Default Fee Amount'] || 0,
+        exceptionOptions: isException ? this.#parseExceptionOptions(exceptionData, record) : []
+      }
+
+      let feeGroup = mappedFees.find(f => f.feeType === record.FeeType)
+      if (!feeGroup) {
+        feeGroup = { feeType: record.FeeType, feeGroups: [] }
+        mappedFees.push(feeGroup)
+      }
+
+      let targetGroup
+      if (isException) {
+        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Exception Request')
+        if (!targetGroup) {
+          targetGroup = { name: 'Exception Request', fields: [] }
+          feeGroup.feeGroups.push(targetGroup)
+        }
+      } else if (isCurrentClient) {
+        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Client Current Fees')
+        if (!targetGroup) {
+          targetGroup = { name: 'Client Current Fees', fields: [] }
+          feeGroup.feeGroups.push(targetGroup)
+        }
+      } else {
+        targetGroup = feeGroup.feeGroups.find(g => g.name === 'Standard Fees')
+        if (!targetGroup) {
+          targetGroup = { name: 'Standard Fees', fields: [] }
+          feeGroup.feeGroups.push(targetGroup)
+        }
+      }
+
+      targetGroup.fields.push(field)
+    })
+
+    return mappedFees
+  }
+
+  #parseExceptionOptions(exceptionData, record) {
+    return exceptionData
+      .filter(exc => exc.FeeCode === record.FeeCode)
+      .map(exc => ({
+        value: exc.Amount,
+        text: `$${exc.Amount}.00`,
         visible: true,
-        kycMailingStatus: fee.kycMailingStatus || null,
-        code: fee.feeGroup,
-        accountNumber: fee.ddaNumber || '',
-        cif: fee.cifno,
-        id:'',
-        fields: [{
-          hasChanged: false,
-          code: fee.feeCode,
-          name:  formatCamelCaseToTitle(fee.feeDescription),
-          defaultValue: fee.feeAmount?.toString() || '',
-          isStandard: fee.isFeesStandard === "Yes",
-          isException: fee.isFeesStandard === "No",
-          isCurrentClient: false,
-          labelValue: `$${fee.feeAmount.toFixed(2)}`,
-          tooltip: fee.source ? `Source: ${fee.source}` : '',
-          exceptionOptions: [],
-          createdAt: timestamp,
-          updatedAt: timestamp,
-          id: fee.ddaNumber.toString()
-        }]
-      }],
-      feeType: "Customer Fees",
-      id:  '',
-    })) || [];
-
-    const formattedFeeGroups = feesData?.fees?.map(feeGroup => ({
-      ...feeGroup,
-      id: '',
-      feeGroups: feeGroup.feeGroups.map(group => ({
-        ...group,
-        id: group.id || '',
-        cif: group.cif || '',
-        accountNumber: group.accountNumber || '',
-        fields: group.fields.map(field => ({
-          ...field,
-          hasChanged: field.hasChanged || false,
-          createdAt: field.createdAt || timestamp,
-          updatedAt: field.updatedAt || timestamp,
-          id: field._id || '',
-          exceptionOptions: field.exceptionOptions?.map(opt => ({
-            ...opt,
-            parameterOptionId: opt.parameterOptionId || '',
-          })) || []
-        }))
+        retired: false
       }))
-    })) || [];
+  }
 
-    const result = {
-      customerName: customerData?.customerAddress?.name || feesData?.customerName || '',
-      customerShortName: feesData?.customerShortName || '',
-      customerAddress: customerData?.customerAddress?.address || '',
-      customerAccountOfficer: customerData?.customerAddress?.officer || '',
-      cif: customerData?.customerAddress?.cif || cif,
-      officerId: feesData?.officerId || '',
-      branchCity: feesData?.branchCity || '',
-      branchState: feesData?.branchState || '',
-      feePackage: feesData?.feePackage || '',
-      defaultFeePackageId: feesData?.defaultFeePackageId || '',
-      fees: [...formattedFees, ...formattedFeeGroups],
-      feesActives: feesData?.feesActives || [],
-      documentUrl: feesData?.documentUrl || '',
-      currentFees
-    };
-    global.logger.info('End process')
-    return Result.ok(result);
+  #getDocumentUrl(feePackageId) {
+    const scheduleUrls = global.environment.scheduleUrls
+    const packageMap = {
+      1: 'intlPB3',
+      2: 'uSPBIndividual3',
+      3: 'uSPBCorporation3',
+      4: 'efraPB3',
+      5: 'eraPB3'
+    }
+
+    const scheduleType = packageMap[feePackageId] || ''
+    
+    return scheduleUrls[scheduleType] || ''
+  }
+
+  #mapCurrentFees(feesData) {
+    return feesData
+      .filter(record => record.FeeAmount > 0)
+      .map(record => ({
+        feeDescription: `${record.FeeDescription} - $${record.FeeAmount}.00`,
+        feeCode: `${record.FeeType} ${record.ACCTNO}`
+      }))
   }
 }
