--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,177 @@
-[
-  {
-    cifno: "F016583",
-    ddaNumber: 7115822,
-    bpsAcctNumber: "",
-    feeType: 1,
-    feeDescription: "AccountMaintenance",
-    feeCode: "JH001",
-    bpsFeeTypeCode: "",
-    source: "JHA",
-    entity: "SNB/284",
-    feeAmount: 25,
-    isFeesStandard: "Yes",
-    kycMailingStatus: null,
-    feeGroup: 1,
+{
+  customerAccount: [
+    {
+      cifno: "F016583",
+      ddaNumber: 7115822,
+      bpsAcctNumber: "",
+      feeType: 1,
+      feeDescription: "AccountMaintenance",
+      feeCode: "JH001",
+      bpsFeeTypeCode: "",
+      source: "JHA",
+      entity: "SNB/284",
+      feeAmount: 25,
+      isFeesStandard: "Yes",
+      kycMailingStatus: null,
+      feeGroup: 1,
+    },
+    {
+      cifno: "F016583",
+      ddaNumber: 7115822,
+      bpsAcctNumber: "",
+      feeType: 2,
+      feeDescription: "HoldMail",
+      feeCode: "JH002",
+      bpsFeeTypeCode: "",
+      source: "JHA",
+      entity: "SNB/284",
+      feeAmount: 0,
+      isFeesStandard: "Yes",
+      kycMailingStatus: "Print",
+      feeGroup: 1,
+    },
+  ],
+  customerAddress: {
+    cif: "F016583",
+    name: "FRANCO JACK",
+    address: "JACK FRANCO 425 EAST 58TH STREET APT # 48 B NEW YORK NY 10022",
+    officer: "036 Sigalit Levy-Shabi        BR 4",
+    accountNumber: "7113617",
   },
-  {
-    cifno: "F016583",
-    ddaNumber: 7115822,
-    bpsAcctNumber: "",
-    feeType: 2,
-    feeDescription: "HoldMail",
-    feeCode: "JH002",
-    bpsFeeTypeCode: "",
-    source: "JHA",
-    entity: "SNB/284",
-    feeAmount: 0,
-    isFeesStandard: "Yes",
-    kycMailingStatus: "Print",
-    feeGroup: 1,
-  },
-]
+  customerCurrentFees: [
+    {
+      feeCode: " Personal Checking -D 7113617",
+      feeDescription: "Hold Mail Fee (per annum) -  $0.00",
+    },
+    {
+      feeCode: " Personal Checking -D 7113617",
+      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
+    },
+    {
+      feeCode: " Personal Checking -D 7115342",
+      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
+    },
+    {
+      feeCode: " Personal Promise   D 7115431",
+      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
+    },
+    {
+      feeCode: " Personal Savings 7115822",
+      feeDescription: "Account Maintenance Fee $1,200 (S/A $600) -  $0.00",
+    },
+    {
+      feeCode: " Personal Savings 7115822",
+      feeDescription: "USD/FX Outgoing Wire Fee $75.00",
+    },
+  ],
+}
+
+
+import Result from '#features/shared/result.js';
+
+export default class FeeCaseGetByCifUseCase {
+  async execute({ cif }, feeManagementModel, customerModel) {
+    const [errCustomer, responseCustomer] = await customerModel.getCustomerDetailsByCif(cif);
+    if (errCustomer) {
+      return Result.fail({ message: "It's not possible to get address cif" });
+    }
+
+    const customerData = responseCustomer?.data?.customer || {};
+    const [errFee, responseFee] = await feeManagementModel.getFeeByAccount(customerData);
+    if (errFee) {
+      return Result.fail({ message: "It's not possible to get fee values" });
+    }
+
+    function formatCamelCaseToTitle(text) {
+      return text.replace(/([a-z])([A-Z])/g, '$1 $2');
+    }
+
+    const feesData = responseFee?.data || {};
+    const timestamp = new Date().toISOString();
+
+    const currentFees = [
+      ...(customerData?.customerCurrentFees?.map(x => ({
+        feeDescription: x.feeDescription || '',
+        feeCode: x.feeCode || ''
+      })) || []),
+      ...(feesData?.currentFees || [])
+    ];
+
+    const formattedFees = customerData?.customerAccount
+      ?.filter(fee => ["Customer Fees", "Bank Account Fees", "Investment Account Fees"].includes(fee.feeType))
+      .map(fee => ({
+        feeGroups: [{
+          name: fee.feeGroup === 1 ? "Client Current Fees" : "Standard Fees",
+          visible: true,
+          kycMailingStatus: customerData.kycMailingStatus || null,
+          code: customerData.feeCode,
+          accountNumber: customerData.ddaNumber || '',
+          cif: fee.cifno,
+          id: '',
+          fields: [{
+            hasChanged: false,
+            code: customerData.feeCode,
+            name: formatCamelCaseToTitle(fee.feeDescription),
+            defaultValue: fee.feeAmount?.toString() || '',
+            isStandard: fee.isFeesStandard === "Yes",
+            isException: fee.isFeesStandard === "No",
+            isCurrentClient: false,
+            labelValue: `$${fee.feeAmount.toFixed(2)}`,
+            tooltip: fee.source ? `Source: ${fee.source}` : '',
+            exceptionOptions: [],
+            createdAt: timestamp,
+            updatedAt: timestamp,
+            id: fee.ddaNumber.toString()
+          }]
+        }],
+        feeType: fee.feeType,
+        id: '',
+      })) || [];
+
+    const formattedFeeGroups = feesData?.fees
+      ?.filter(feeGroup => ["Customer Fees", "Bank Account Fees", "Investment Account Fees"].includes(feeGroup.feeType))
+      .map(feeGroup => ({
+        ...feeGroup,
+        id: '',
+        feeGroups: feeGroup.feeGroups.map(group => ({
+          ...group,
+          id: group.id || '',
+          cif: group.cif || '',
+          accountNumber: group.accountNumber || '',
+          fields: group.fields.map(field => ({
+            ...field,
+            hasChanged: field.hasChanged || false,
+            createdAt: field.createdAt || timestamp,
+            updatedAt: field.updatedAt || timestamp,
+            id: field._id || '',
+            exceptionOptions: field.exceptionOptions?.map(opt => ({
+              ...opt,
+              parameterOptionId: opt.parameterOptionId || '',
+            })) || []
+          }))
+        }))
+      })) || [];
+
+    const result = {
+      customerName: customerData?.customerAddress?.name || feesData?.customerName || '',
+      customerShortName: feesData?.customerShortName || '',
+      customerAddress: customerData?.customerAddress?.address || '',
+      customerAccountOfficer: customerData?.customerAddress?.officer || '',
+      cif: customerData?.customerAddress?.cif || cif,
+      officerId: feesData?.officerId || '',
+      branchCity: feesData?.branchCity || '',
+      branchState: feesData?.branchState || '',
+      branchType: feesData?.branchType || '',
+      feePackage: feesData?.feePackage || '',
+      defaultFeePackageId: feesData?.defaultFeePackageId || '',
+      defaultPackageType: feesData?.defaultPackageType || '',
+      fees: [...formattedFees, ...formattedFeeGroups],
+      feesActives: feesData?.feesActives || [],
+      documentUrl: feesData?.documentUrl || '',
+      currentFees
+    };
+
+    global.logger.info('End process');
+    return Result.ok(result);
+  }
+}
